--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "@types/d3": "^5.7.2"
   },
   "dependencies": {
-    "@types/d3": "^5.7.2",
     "d3": "^5.16.0",
     "rxjs": "^6.5.5"
   }
