--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,8 @@ name: build to doc folder
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
@@ -14,7 +16,8 @@ jobs:
       - name: Use Node.js 14
         uses: actions/setup-node@v2
         with:
-          node-version: v14
+          node-version: '14.x'
+          cache: 'npm'
       - run: npm ci
       - run: npm test
       - run: npm run build --if-present
